--- a/theme/scss/main.scss
+++ b/theme/scss/main.scss
@@ -1,6 +1,8 @@
-@import "reset";
+@import "compass/reset";
 @import "variables";
 @import "media";
+@import "grid";
+@import "mixin";
 @import "font";
 @import "img";
 
