--- a/theme/scss/_variables.scss
+++ b/theme/scss/_variables.scss
@@ -10,3 +10,6 @@ $break-large:   1080px;
 $font-family-english: 'Open Sans'; // Google open sans
 $font-family-chinese: 'Microsoft JhengHei'; // 微軟正黑體
 $font-family-notosanstc: 'Noto Sans SC'; //思源黑體
+
+// Grid 設定
+$container-width: 100% !default;
