Rensky layout 第二版

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -24,3 +24,11 @@ html, body { font-size: 10px; font-family: "Open Sans", "Microsoft JhengHei"; }
 /**************\
 * Main
 \**************/
+.img-list { border: red 1px solid; margin: 0 auto; }
+.img-list li { width: calc((100% - 0px*(4 - 1)) / 4); height: calc((100vw - 0px*(4 - 1)) / 4); margin-right: 0px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; }
+.img-list li:nth-child(4n) { margin-right: 0px; }
+.img-list li { background-color: #000000; }
+.img-list li img { -webkit-transform: scale(1); transform: scale(1); -webkit-transition: .3s ease-in-out; transition: .3s ease-in-out; }
+.img-list li:hover { background-color: #000000; }
+.img-list li:hover img { -webkit-transform: scale(0.8); transform: scale(0.8); }
+.img-list li img { width: 100%; height: 100%; }
