--- a/theme/scss/main.scss
+++ b/theme/scss/main.scss
@@ -11,4 +11,18 @@
 /**************\
 * Main
 \**************/
+.no-limits {
+  font-size: 3vw;
+}
 
+.limits-min {
+  @include r-font(3vw, 20px);
+}
+
+.limits-min-max {
+  @include r-font(3vw, 20px, 30px);
+}
+
+.no-font{
+	@include r-font(5vw, 35px, 150px, 50px);
+}
