--- a/theme/scss/_font.scss
+++ b/theme/scss/_font.scss
@@ -13,3 +13,34 @@ html,body{
 @mixin font-size($size){
 	font-size: ($size/$font-size-base) + rem;
 }
+
+// $responsive  - 一個字基本為多少vw
+// $min         - 字體最小設限 (px)
+// $max         - 字體最大設限 (px)
+// $fallback    - 假如瀏覽器不支援的話設定字體的大小(px)
+// 用法         - @include(基本大小(vw),字體最小設限(px),字體最大設限(px),不支援vw情況下字體大小(px 選用))
+//                @include(3px,20px,30px,30px)
+
+@mixin r-font($responsive, $min, $max: false, $fallback: false) {
+  $responsive-unitless: $responsive / ($responsive - $responsive + 1);
+  $dimension: if(unit($responsive) == 'vh', 'height', 'width');
+  $min-breakpoint: $min / $responsive-unitless * 100;
+  
+  @media (max-#{$dimension}: #{$min-breakpoint}) {
+    font-size: $min;
+  }
+  
+  @if $max {
+    $max-breakpoint: $max / $responsive-unitless * 100;
+    
+    @media (min-#{$dimension}: #{$max-breakpoint}) {
+      font-size: $max;
+    }
+  }
+  
+  @if $fallback {
+    font-size: $fallback;
+  }
+  
+  font-size: $responsive;
+}
